--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Woosung Choi
+tagline:             'ws-choi'
+description:         Woosung Choi's blog
+url:                 https://ws-choi.github.io/blog-kor
 baseurl:             ''
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Woosung choi
+  url:               https://twitter.com/
+  email:             ws_choi@korea.ac.kr
 
 # Gems
 plugins:
